--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -1,9 +1,20 @@
 .Button {
-    background-color: rgb(236, 236, 236);
-    cursor: pointer;
-    border: none;
-    border-radius: 5px;
-    padding: 10px 20px;
-    font-size: 18px;
-    white-space: nowrap;
+  background-color: transparent;
+  cursor: pointer;
+  border: 2px solid rgb(236, 236, 236);
+  border-radius: 5px;
+  padding: 10px 20px;
+  font-size: 18px;
+  white-space: nowrap;
+  cursor: pointer;
+}
+
+
+.Button.complete-button {
+  border: 2px solid rgb(255, 186, 83);
+}
+
+.Button.complete-button:hover {
+    background-color: rgb(255, 186, 83);
+    color: white;
 }
