--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -26,3 +26,12 @@
   background-color: rgb(255, 98, 98);
   color: white;
 }
+
+.Button.edit-button {
+  border: 2px solid rgb(255, 186, 83);
+}
+
+.Button.edit-button:hover {
+  background-color: rgb(255, 186, 83);
+  color: white;
+}
